1) Добавлен интерфейс регистрации команды. Не отлажен!! 2) Добавлены служебные штуки в core_funcs: по названиям дистанций генерится регулярка, User получает поля по названиям дистанций и ещё по мелочи. 3) Добавлен парчинг числа участников в группе на дистанции. 4) Косметические исправления в обработчике ошибок и нтерфейсе регистрации пользователя.

--- a/load_info/info.conf
+++ b/load_info/info.conf
@@ -13,6 +13,7 @@ open_time = "09:00" # часы:минуты
 close_time = "17:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
+team_members = 1
 
 [mountain_complex]
 # Время пишется без пробелов!
@@ -20,6 +21,7 @@ open_time = "10:00" # часы:минуты
 close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
+team_members = 1
 
 [fox_hunting]
 # Время пишется без пробелов!
@@ -27,6 +29,7 @@ open_time = "15:00" # часы:минуты
 close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
+team_members = 1
 
 [water_katamaran]
 # Время пишется без пробелов!
@@ -34,6 +37,7 @@ open_time = "12:00" # часы:минуты
 close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
+team_members = 2
 
 [common_tour]
 # Время пишется без пробелов!
@@ -41,3 +45,4 @@ open_time = "09:00" # часы:минуты
 close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
+team_members = 4
