промежуточный коммит. добавили гитигнор

--- a/load_info/info.conf
+++ b/load_info/info.conf
@@ -14,6 +14,7 @@ close_time = "17:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
+st_one = "Первый этап Злая Аня рычит мне в ухо"
 
 [mountain_complex]
 # Время пишется без пробелов!
