--- a/run.ini
+++ b/run.ini
@@ -1,4 +1,4 @@
 secure_file = "secure_info/main.conf"
-secure_dir = "secure_info"
+secure_dir = "secure_info/"
 info_file = "load_info/info.conf"
-info_dir = "load_info"
+info_dir = "load_info/"
