Начала обрабатывать клавиатуру для этапов

--- a/load_info/info.conf
+++ b/load_info/info.conf
@@ -2,10 +2,11 @@
 mountain_simple = "Горная Простая"
 mountain_complex = "Горная Сложная"
 fox_hunting = "Охота на лис"
+bike = "Велосипедная дистанция"
 
 [group_distances]
 water_katamaran = "Водная. Катамаран"
-common_tour = "Общетуристическая"
+adventure_tour = "Приключенческая"
 
 [mountain_simple]
 # Время пишется без пробелов!
@@ -14,7 +15,10 @@ close_time = "17:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
-st_one = "Первый этап Злая Аня рычит мне в ухо"
+#st_one = "Первый этап Злая Аня рычит мне в ухо"
+st_one = "Этап 1. Здесь трещин нет"
+st_two = "Этап 2. Руки-крюки"
+st_three = "Этап 3. Тише едешь - дальше будешь"
 
 [mountain_complex]
 # Время пишется без пробелов!
@@ -23,6 +27,10 @@ close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
+st_one = "Этап 1. Метод смешанного спуска"
+st_two = "Этап 2. Верёвка Фибоначчи"
+st_three = "Этап 3. Сравнение бесконечно малых"
+st_four = "Этап 4. Поиск остаточного члена"
 
 [fox_hunting]
 # Время пишется без пробелов!
@@ -39,11 +47,47 @@ close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 2
+st_one = "Катамаран-2 мужчины"
+st_two = "Катамаран-2 смешанный"
+st_three = "Катамаран-2 женщины"
+st_four = "Каяк-1 мужчины"
+st_five = "Каяк-1 женщины"
+st_six = "Байдарка-2 мужчины"
+st_seven = "Байдарка-2 смешанная"
+st_eight = "Байдарка-2 женщины"
 
-[common_tour]
+[adventure_tour]
 # Время пишется без пробелов!
 open_time = "09:00" # часы:минуты
 close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 4
+st_one = "Этап 1. Хоровод"
+st_two = "Этап 2. Балансир"
+st_three = "Этап 3. Змейка"
+st_four = "Этап 4. Колобок"
+st_five = "Этап 5. Петанк"
+st_six = "Этап 6. Гигантский слалом"
+st_seven = "Этап 7. Тарзанка"
+st_eight = "Этап 8. Слеги"
+st_nine = "Этап 9. Ледопад"
+st_ten = "Этап 10. Бивак"
+
+[bike]
+# Время пишется без пробелов!
+open_time = "" # часы:минуты
+close_time = "" # часы:минуты
+interval = "" # минуты:секунды
+passing_time = "" # минуты:секунды
+st_one = "Фигурная езда"
+st_two = "Ориентирование"
+#???? ли то что ниже один этап. не поняла
+st_three = "Ремонт"
+st_four = "Лабиринт"
+st_five = "Медленная езда"
+st_six = "Восьмерка"
+st_seven = "Бревно"
+st_eight = "Ворота"
+st_nine = "Узкий створ"
+
