поменяла info.conf

--- a/load_info/info.conf
+++ b/load_info/info.conf
@@ -6,7 +6,7 @@ bike = "Велосипедная дистанция"
 
 [group_distances]
 water_katamaran = "Водная. Катамаран"
-adventure_tour = "Приключенческая"
+adventure = "Приключенческая"
 
 [mountain_simple]
 # Время пишется без пробелов!
@@ -16,6 +16,8 @@ interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
 #st_one = "Первый этап Злая Аня рычит мне в ухо"
+mountain_simple_stages = "mountain_simple_stages"
+[mountain_simple_stages]
 st_one = "Этап 1. Здесь трещин нет"
 st_two = "Этап 2. Руки-крюки"
 st_three = "Этап 3. Тише едешь - дальше будешь"
@@ -27,6 +29,8 @@ close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
+mountain_complex_stages = "mountain_complex_stages"
+[mountain_complex_stages]
 st_one = "Этап 1. Метод смешанного спуска"
 st_two = "Этап 2. Верёвка Фибоначчи"
 st_three = "Этап 3. Сравнение бесконечно малых"
@@ -40,6 +44,7 @@ interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
 
+
 [water_katamaran]
 # Время пишется без пробелов!
 open_time = "12:00" # часы:минуты
@@ -47,6 +52,8 @@ close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 2
+water_katamaran_stages = "water_katamaran_stages"
+[water_katamaran_stages]
 st_one = "Катамаран-2 мужчины"
 st_two = "Катамаран-2 смешанный"
 st_three = "Катамаран-2 женщины"
@@ -56,13 +63,15 @@ st_six = "Байдарка-2 мужчины"
 st_seven = "Байдарка-2 смешанная"
 st_eight = "Байдарка-2 женщины"
 
-[adventure_tour]
+[adventure]
 # Время пишется без пробелов!
 open_time = "09:00" # часы:минуты
 close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 4
+adventure_stages = "adventure_stages"
+[adventure_stages]
 st_one = "Этап 1. Хоровод"
 st_two = "Этап 2. Балансир"
 st_three = "Этап 3. Змейка"
@@ -76,10 +85,12 @@ st_ten = "Этап 10. Бивак"
 
 [bike]
 # Время пишется без пробелов!
-open_time = "" # часы:минуты
-close_time = "" # часы:минуты
-interval = "" # минуты:секунды
-passing_time = "" # минуты:секунды
+open_time = "09:00" # часы:минуты
+close_time = "16:00" # часы:минуты
+interval = "05:00" # минуты:секунды
+passing_time = "50:00" # минуты:секунды
+bike_stages = "bike_stages"
+[bike_stages]
 st_one = "Фигурная езда"
 st_two = "Ориентирование"
 #???? ли то что ниже один этап. не поняла
