1) Исправления в алгоритме выдачи времени: првильное услови + удаление занятых слотов, а так же верная подгрузка из файла. 2) Мелкие исправления в user_interface.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@ __pycache__/
 #Local secure info
 secure_info/
 
+#User data
+load_info/Judges list.xlsx
+load_info/Teams.xlsx
+load_info/Users.xlsx
+
 # Distribution / packaging
 .Python
 build/
