дописала дистанции и старты\фин\отсечки для этапов

--- a/load_info/info.conf
+++ b/load_info/info.conf
@@ -3,6 +3,7 @@ mountain_simple = "Горная Простая"
 mountain_complex = "Горная Сложная"
 fox_hunting = "Охота на лис"
 bike = "Велосипедная дистанция"
+pedestrian = 'Пешеходная дистанция'
 
 [group_distances]
 water_katamaran = "Водная. Катамаран"
@@ -16,11 +17,24 @@ interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
 #st_one = "Первый этап Злая Аня рычит мне в ухо"
-mountain_simple_stages = "mountain_simple_stages"
-[mountain_simple_stages]
-st_one = "Этап 1. Здесь трещин нет"
-st_two = "Этап 2. Руки-крюки"
-st_three = "Этап 3. Тише едешь - дальше будешь"
+st1 = "Этап 1. Здесь трещин нет"
+st2 = "Этап 2. Руки-крюки"
+st3 = "Этап 3. Тише едешь - дальше будешь"
+[mountain_simple_st1]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[mountain_simple_st2]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[mountain_simple_st3]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
 
 [mountain_complex]
 # Время пишется без пробелов!
@@ -29,12 +43,30 @@ close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
-mountain_complex_stages = "mountain_complex_stages"
-[mountain_complex_stages]
-st_one = "Этап 1. Метод смешанного спуска"
-st_two = "Этап 2. Верёвка Фибоначчи"
-st_three = "Этап 3. Сравнение бесконечно малых"
-st_four = "Этап 4. Поиск остаточного члена"
+st1 = "Этап 1. Метод смешанного спуска"
+st2 = "Этап 2. Верёвка Фибоначчи"
+st3 = "Этап 3. Сравнение бесконечно малых"
+st4 = "Этап 4. Поиск остаточного члена"
+[mountain_complex_st1]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[mountain_complex_st2]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[mountain_complex_st3]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[mountain_complex_st4]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
 
 [fox_hunting]
 # Время пишется без пробелов!
@@ -43,7 +75,11 @@ close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
-
+st1 = "Единственный этап"
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
 
 [water_katamaran]
 # Время пишется без пробелов!
@@ -52,16 +88,54 @@ close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 2
-water_katamaran_stages = "water_katamaran_stages"
-[water_katamaran_stages]
-st_one = "Катамаран-2 мужчины"
-st_two = "Катамаран-2 смешанный"
-st_three = "Катамаран-2 женщины"
-st_four = "Каяк-1 мужчины"
-st_five = "Каяк-1 женщины"
-st_six = "Байдарка-2 мужчины"
-st_seven = "Байдарка-2 смешанная"
-st_eight = "Байдарка-2 женщины"
+st1 = "Катамаран-2 мужчины"
+st2 = "Катамаран-2 смешанный"
+st3 = "Катамаран-2 женщины"
+st4 = "Каяк-1 мужчины"
+st5 = "Каяк-1 женщины"
+st6 = "Байдарка-2 мужчины"
+st7 = "Байдарка-2 смешанная"
+st8 = "Байдарка-2 женщины"
+[water_katamaran_st1]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[water_katamaran_st2]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[water_katamaran_st3]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[water_katamaran_st4]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[water_katamaran_st5]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[water_katamaran_st6]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[water_katamaran_st7]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[water_katamaran_st8]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
 
 [adventure]
 # Время пишется без пробелов!
@@ -70,18 +144,69 @@ close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 4
-adventure_stages = "adventure_stages"
-[adventure_stages]
-st_one = "Этап 1. Хоровод"
-st_two = "Этап 2. Балансир"
-st_three = "Этап 3. Змейка"
-st_four = "Этап 4. Колобок"
-st_five = "Этап 5. Петанк"
-st_six = "Этап 6. Гигантский слалом"
-st_seven = "Этап 7. Тарзанка"
-st_eight = "Этап 8. Слеги"
-st_nine = "Этап 9. Ледопад"
-st_ten = "Этап 10. Бивак"
+st1 = "Этап 1. Хоровод"
+st2 = "Этап 2. Балансир"
+st3 = "Этап 3. Змейка"
+st4 = "Этап 4. Колобок"
+st5 = "Этап 5. Петанк"
+st6 = "Этап 6. Гигантский слалом"
+st7 = "Этап 7. Тарзанка"
+st8 = "Этап 8. Слеги"
+st9 = "Этап 9. Ледопад"
+st10 = "Этап 10. Бивак"
+[adventure_st1]
+start = "старт"
+cutoff = "отсечка"
+[adventure_st2]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[adventure_st3]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[adventure_st4]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[adventure_st5]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[adventure_st6]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[adventure_st7]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[adventure_st8]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[adventure_st9]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[adventure_st9]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[adventure_st10]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
 
 [bike]
 # Время пишется без пробелов!
@@ -89,16 +214,65 @@ open_time = "09:00" # часы:минуты
 close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
-bike_stages = "bike_stages"
-[bike_stages]
-st_one = "Фигурная езда"
-st_two = "Ориентирование"
-#???? ли то что ниже один этап. не поняла
-st_three = "Ремонт"
-st_four = "Лабиринт"
-st_five = "Медленная езда"
-st_six = "Восьмерка"
-st_seven = "Бревно"
-st_eight = "Ворота"
-st_nine = "Узкий створ"
+st1 = "Фигурная езда"
+st2 = "Ориентирование"
+st3 = "Фигуры"
+[bike_st1]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[bike_st2]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[bike_st3]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
 
+[pedestrian]
+# Время пишется без пробелов!
+open_time = "09:00" # часы:минуты
+close_time = "16:00" # часы:минуты
+interval = "05:00" # минуты:секунды
+passing_time = "50:00" # минуты:секунды
+team_members = 1
+st1 = "Этап 1. Подъём по перилам"
+st2 = "Этап 2. Параллельные перила"
+st3 = "Этап 3. Спуск по перилам"
+st4 = "Этап 4. Навесная переправа"
+st5 = "Этап 5. Восстановление навесной переправы"
+st6 = "Этап 6. Переправа методом горизонтальный маятник"
+[pedestrian_st1]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[pedestrian_st2]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[pedestrian_st3]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[pedestrian_st4]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[pedestrian_st5]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
+[pedestrian_st6]
+start = "старт"
+finish = "финиш"
+cutoff = "отсечка"
+penalty = "штраф"
