1) Запущены напоминалки, работаютли - загадка. 2) Проведён массовый тест, почистилвсякое.

--- a/load_info/info.conf
+++ b/load_info/info.conf
@@ -1,13 +1,17 @@
 [personal_distances]
-mountain_simple = "Горная Простая"
-mountain_complex = "Горная Сложная"
+#mountain_simple = "Горная Простая"
+#mountain_complex = "Горная Сложная"
 fox_hunting = "Охота на лис"
-bike = "Велосипедная дистанция"
-pedestrian = 'Пешеходная дистанция'
+#bike = "Велосипедная дистанция"
+pedestrian = "Пешеходная"
+speleo = "Спелео дистанция"
+uchebnaya = "Учебная"
 
 [group_distances]
-water_katamaran = "Водная. Катамаран"
+#water_katamaran = "Водная. Катамаран"
 adventure = "Приключенческая"
+med_simple = "Медэтап_новичковая"
+med_scomplex = "Медэтап_продвинутая"
 
 [mountain_simple]
 # Время пишется без пробелов!
@@ -17,24 +21,6 @@ interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
 #st_one = "Первый этап Злая Аня рычит мне в ухо"
-st1 = "Этап 1. Здесь трещин нет"
-st2 = "Этап 2. Руки-крюки"
-st3 = "Этап 3. Тише едешь - дальше будешь"
-[mountain_simple_st1]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[mountain_simple_st2]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[mountain_simple_st3]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
 
 [mountain_complex]
 # Время пишется без пробелов!
@@ -43,30 +29,22 @@ close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
-st1 = "Этап 1. Метод смешанного спуска"
-st2 = "Этап 2. Верёвка Фибоначчи"
-st3 = "Этап 3. Сравнение бесконечно малых"
-st4 = "Этап 4. Поиск остаточного члена"
-[mountain_complex_st1]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[mountain_complex_st2]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[mountain_complex_st3]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[mountain_complex_st4]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
+
+
+[speleo]
+open_time = "10:00" # часы:минуты
+close_time = "16:00" # часы:минуты
+interval = "05:00" # минуты:секунды
+passing_time = "50:00" # минуты:секунды
+team_members = 1
+
+[uchebnaya]
+open_time = "10:00" # часы:минуты
+close_time = "16:00" # часы:минуты
+interval = "05:00" # минуты:секунды
+passing_time = "50:00" # минуты:секунды
+team_members = 1
+
 
 [fox_hunting]
 # Время пишется без пробелов!
@@ -75,138 +53,6 @@ close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
-st1 = "Единственный этап"
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-
-[water_katamaran]
-# Время пишется без пробелов!
-open_time = "12:00" # часы:минуты
-close_time = "16:00" # часы:минуты
-interval = "05:00" # минуты:секунды
-passing_time = "50:00" # минуты:секунды
-team_members = 2
-st1 = "Катамаран-2 мужчины"
-st2 = "Катамаран-2 смешанный"
-st3 = "Катамаран-2 женщины"
-st4 = "Каяк-1 мужчины"
-st5 = "Каяк-1 женщины"
-st6 = "Байдарка-2 мужчины"
-st7 = "Байдарка-2 смешанная"
-st8 = "Байдарка-2 женщины"
-[water_katamaran_st1]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[water_katamaran_st2]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[water_katamaran_st3]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[water_katamaran_st4]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[water_katamaran_st5]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[water_katamaran_st6]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[water_katamaran_st7]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[water_katamaran_st8]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-
-[adventure]
-# Время пишется без пробелов!
-open_time = "09:00" # часы:минуты
-close_time = "16:00" # часы:минуты
-interval = "05:00" # минуты:секунды
-passing_time = "50:00" # минуты:секунды
-team_members = 4
-st1 = "Этап 1. Хоровод"
-st2 = "Этап 2. Балансир"
-st3 = "Этап 3. Змейка"
-st4 = "Этап 4. Колобок"
-st5 = "Этап 5. Петанк"
-st6 = "Этап 6. Гигантский слалом"
-st7 = "Этап 7. Тарзанка"
-st8 = "Этап 8. Слеги"
-st9 = "Этап 9. Ледопад"
-st10 = "Этап 10. Бивак"
-[adventure_st1]
-start = "старт"
-cutoff = "отсечка"
-[adventure_st2]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[adventure_st3]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[adventure_st4]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[adventure_st5]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[adventure_st6]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[adventure_st7]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[adventure_st8]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[adventure_st9]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[adventure_st9]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[adventure_st10]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
 
 [bike]
 # Время пишется без пробелов!
@@ -214,24 +60,7 @@ open_time = "09:00" # часы:минуты
 close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
-st1 = "Фигурная езда"
-st2 = "Ориентирование"
-st3 = "Фигуры"
-[bike_st1]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[bike_st2]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[bike_st3]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
+
 
 [pedestrian]
 # Время пишется без пробелов!
@@ -240,39 +69,34 @@ close_time = "16:00" # часы:минуты
 interval = "05:00" # минуты:секунды
 passing_time = "50:00" # минуты:секунды
 team_members = 1
-st1 = "Этап 1. Подъём по перилам"
-st2 = "Этап 2. Параллельные перила"
-st3 = "Этап 3. Спуск по перилам"
-st4 = "Этап 4. Навесная переправа"
-st5 = "Этап 5. Восстановление навесной переправы"
-st6 = "Этап 6. Переправа методом горизонтальный маятник"
-[pedestrian_st1]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[pedestrian_st2]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[pedestrian_st3]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[pedestrian_st4]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[pedestrian_st5]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
-[pedestrian_st6]
-start = "старт"
-finish = "финиш"
-cutoff = "отсечка"
-penalty = "штраф"
+
+[med_simple]
+# Время пишется без пробелов!
+open_time = "09:00" # часы:минуты
+close_time = "16:00" # часы:минуты
+interval = "05:00" # минуты:секунды
+passing_time = "50:00" # минуты:секунды
+team_members = 4
+[med_scomplex]
+# Время пишется без пробелов!
+open_time = "09:00" # часы:минуты
+close_time = "16:00" # часы:минуты
+interval = "05:00" # минуты:секунды
+passing_time = "50:00" # минуты:секунды
+team_members = 4
+[water_katamaran]
+# Время пишется без пробелов!
+open_time = "12:00" # часы:минуты
+close_time = "16:00" # часы:минуты
+interval = "05:00" # минуты:секунды
+passing_time = "50:00" # минуты:секунды
+team_members = 2
+
+
+[adventure]
+# Время пишется без пробелов!
+open_time = "09:00" # часы:минуты
+close_time = "16:00" # часы:минуты
+interval = "05:00" # минуты:секунды
+passing_time = "50:00" # минуты:секунды
+team_members = 4
